K8s/Kustomize/base/sockshop/catalogue/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue
  labels:
    name: catalogue
spec:
  replicas: 3
  selector:
    matchLabels:
      name: catalogue
  template:
    metadata:
      labels:
        name: catalogue
    spec:
      containers:
        - name: catalogue
          image: weaveworksdemos/catalogue:0.3.5
          resources:
            limits:
              cpu: 300m
              memory: 800Mi
            requests:
              cpu: 100m # 100 millicores (0.1 CPU)
              memory: 300Mi
          ports:
            - containerPort: 8080
          securityContext:
            capabilities:
              drop:
                - all
              add:
                - NET_BIND_SERVICE
            readOnlyRootFilesystem: true
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 300
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 180
            periodSeconds: 3
# We fixed the containerPort, it was 80, while it is actually 8080 according to the Dockerfile
# Same for the ports of liveness and readiness!
