K8s/Kustomize/base/sockshop/catalogue/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: catalogue-access
spec:
  podSelector:
    matchLabels:
      name: catalogue
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              name: front-end
        - namespaceSelector:
            matchLabels:
              name: database
          podSelector:
            matchLabels:
              app: mysql
      ports:
        - protocol: TCP
          port: 8080
